--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -7,5 +7,35 @@ body {
   font-family: $primary-font;
   .app-title {
     font-family: $secondary-font;
+    text-align: center;
+    color: $primary-color;
+    margin: 20px 0;
+    transition: 0.2s ease-in;
+    user-select: none;
+    &:hover {
+      color: darken($color: $secondary-color, $amount: 30%);
+    }
+  }
+  // List
+  .summary-global {
+    max-width: 1000px;
+    margin: 0 auto;
+    margin-top: 40px;
+    display: grid;
+    grid-gap: 1em;
+    grid-row-gap: 2em;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    .global__box {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .title {
+        margin-bottom: 10px;
+        font-weight: 700;
+        color: $secondary-color;
+        user-select: none;
+      }
+    }
   }
 }
