--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,9 +1,9 @@
 // Variables
 
 // Colors
-$primary-color: #8566aa;
-$secondary-color: #6983aa;
-$tertiary-color: #8ec6c5;
+$primary-color: #202040;
+$secondary-color: #ff6363;
+$tertiary-color: #ffbd69;
 
 // Fonts
 $primary-font: "Lato", sans-serif;
