Styled & separate function for space

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,7 +2,7 @@
 
 // Colors
 $primary-color: #202040;
-$secondary-color: #ff6363;
+$secondary-color: #dc143c;
 $tertiary-color: #ffbd69;
 
 // Fonts
