--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -13,7 +13,7 @@ body {
     transition: 0.2s ease-in;
     user-select: none;
     &:hover {
-      color: darken($color: $secondary-color, $amount: 30%);
+      color: darken($color: $secondary-color, $amount: 10%);
     }
   }
   // List
@@ -29,12 +29,28 @@ body {
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: space-evenly;
+      background-color: $tertiary-color;
+      min-height: 200px;
 
       .title {
-        margin-bottom: 10px;
+        font-size: 20px;
         font-weight: 700;
-        color: $secondary-color;
+        color: $primary-color;
         user-select: none;
+        transition: 0.2s ease-in;
+        user-select: none;
+        &:hover {
+          color: darken($color: $secondary-color, $amount: 10%);
+        }
+      }
+      .numbers {
+        color: $secondary-color;
+        font-size: 18px;
+        &:after {
+          content: " cases";
+          color: $primary-color;
+        }
       }
     }
   }
