--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -28,6 +28,7 @@ body {
     grid-gap: 1em;
     grid-row-gap: 2em;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    padding: 0 20px;
     .global__box {
       display: flex;
       flex-direction: column;
