--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body .summary-global {
   grid-row-gap: 2em;
   -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  padding: 0 20px;
 }
 
 body .summary-global .global__box {
