--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -34,7 +34,6 @@ body {
       flex-direction: column;
       align-items: center;
       justify-content: space-evenly;
-      background-color: $tertiary-color;
       min-height: 200px;
       border: 2px dashed $primary-color;
       .title {
@@ -65,5 +64,25 @@ body {
     padding-bottom: 10px;
     user-select: none;
     color: $primary-color;
+    font-size: 14px;
+    .link,
+    .year,
+    .copy {
+      text-decoration: none;
+      color: seagreen;
+      font-weight: bold;
+    }
+  }
+}
+
+@keyframes pulse {
+  0% {
+    opacity: 0.3;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.3;
   }
 }
